vemo-app/main/default/objects/Deferment__c/Deferment__c.object-meta.xml
<CustomObject>
    <label>Deferment</label>
    <nameField>
        <displayFormat>DF-{000000}</displayFormat>
        <label>Deferment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deferments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>