vemo-app/main/default/objects/Deferment__c/fields/AnnualIncome__c.field-meta.xml
<CustomField>
    <fullName>AnnualIncome__c</fullName>
    <inlineHelpText>If Type is Below minimum income (working full-time or part-time), this indicates student's current annual income.</inlineHelpText>
    <label>Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>