vemo-app/main/default/objects/Deferment__c/fields/EnrollmentStatus__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentStatus__c</fullName>
    <inlineHelpText>If Type is 'Enrolled in School', this indicates the status of the enrollment.</inlineHelpText>
    <label>Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EnrollmentStatus</valueSetName>
    </valueSet>
</CustomField>