vemo-app/main/default/objects/Deferment__c/fields/MonthlyIncome__c.field-meta.xml
<CustomField>
    <fullName>MonthlyIncome__c</fullName>
    <inlineHelpText>If Type is Below minimum income (working full-time or part-time), this indicates student's current monthly income.</inlineHelpText>
    <label>Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>