vemo-app/main/default/objects/Deferment__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <inlineHelpText>The Student related to this Deferment.</inlineHelpText>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deferments</relationshipLabel>
    <relationshipName>Deferements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>