vemo-app/main/default/objects/Deferment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Certain circumstances, such as going back to school or earning below an Earned Income threshold, qualify the student for a deferment.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DefermentType</valueSetName>
    </valueSet>
</CustomField>